# cxx-clean-include

./: .gitignore  CMakeLists.txt  LoopConvert.cpp  README.md  check.md  cxx-clean-include原理.docx  cxx_clean.cpp  cxxclean_hello.html  html_log.cpp  html_log.h  parsing_cpp.cpp  parsing_cpp.h  print_function_name.cpp  project.cpp  project.h  project_history.cpp  project_history.h  ss.md  stdafx.cpp  stdafx.h  test.cpp  tool.cpp  tool.h  vs_config.cpp  vs_config.h  vs_project.cpp  vs_project.h  whole_project.cpp  whole_project.h  如何编译本项目.txt
hello/: a.h  a_func.cpp  a_func.h  b.h  b_class.cpp  b_class.h  c.h  c_macro.cpp  c_macro.h  d_template.cpp  d_template.h  e.h  e_typedef.cpp  e_typedef.h  f_1.h  f_2.h  f_3.h  f_4.h  f_forwarddecl.cpp  f_forwarddecl.h  g.h  g_1.h  g_default_arg.cpp  g_default_arg.h  h.h  h_use_forwarddecl.cpp  h_use_forwarddecl.h  hello.cpp  hello.sln  hello.vcxproj  hello.vcxproj.filters  i_1.h  i_2.h  i_3.h  i_deeply_include.cpp  i_deeply_include.h  j.h  j_enumeration.cpp  j_enumeration.h  k.h  (+43 more)
src/: CMakeLists.txt  c++check.rar  cxx_clean.cpp  cxx_clean.h  history.cpp  history.h  html_log.cpp  html_log.h  main.cpp  parser.cpp  parser.h  parsing_cpp.cpp  parsing_cpp.h  project.cpp  project.h  project_history.cpp  project_history.h  test.cpp  test.h  tool.cpp  tool.h  vs.cpp  vs.h  vs_project.cpp  vs_project.h  如何编译本项目.txt
src/一些需要修改的clang项目文件/Basic/: SourceManager.cpp
src/一些需要修改的clang项目文件/Driver/: MSVCToolChain.cpp
src/一些需要修改的clang项目文件/Lex/: HeaderSearch.cpp  LiteralSupport.cpp  PPDirectives.cpp
src/一些需要修改的clang项目文件/Parse/: ParseExprCXX.cpp
src/一些需要修改的clang项目文件/Sema/: DeclSpec.cpp  SemaInit.cpp  SemaOverload.cpp
src/一些需要修改的clang项目文件/llvm/lib/Support/: MemoryBuffer.cpp
src/一些需要修改的clang项目文件/llvm/lib/Support/Windows/: Path.inc
src/一些需要修改的clang项目文件/llvm/tools/clang/include/clang/Lex/: PPCallbacks.h
src/一些需要修改的clang项目文件/llvm/tools/clang/lib/Basic/: FileManager.cpp  SourceManager.cpp
src/一些需要修改的clang项目文件/llvm/tools/clang/lib/Sema/: DeclSpec.cpp  SemaOverload.cpp
src/一些需要修改的clang项目文件/llvm/tools/clang/lib/Tooling/: Tooling.cpp
tools/: CMakeLists.txt
tools/cxx-clean-include/: CMakeLists.txt  history.cpp  history.h  html_log.cpp  main.cpp  parser.h  project.cpp  tool.h  vs.cpp  如何编译本项目.txt
