set(LLVM_LINK_COMPONENTS support)

add_clang_executable(cxxclean
	cxx_clean.cpp
	parsing_cpp.cpp	
	project.cpp
	project_history.cpp
	test.cpp
	tool.cpp
	vs_project.cpp
	html_log.cpp
	main.cpp
)

include_directories(
	${CLANG_SOURCE_DIR}
)

link_directories(
	"${LLVM_LIBRARY_DIR}"
	"${CMAKE_BINARY_DIR}/lib${LLVM_LIBDIR_SUFFIX}"
)

target_link_libraries(cxxclean
	clangTooling
	clangBasic
	clangASTMatchers
	clangFrontend
	clangDriver
	clangParse
	clangSerialization
	clangSema
	clangEdit
	clangAnalysis
	clangToolingCore
	clangAST
	clangRewrite
	clangLex
	LLVMOption
	LLVMMCParser
	LLVMBitReader
	LLVMSupport
	LLVMCore
	LLVMMC
	LLVMAnalysis
	LLVMCodeGen
	LLVMipo
	LLVMInstCombine
	LLVMInstrumentation
	LLVMObjCARCOpts
	LLVMScalarOpts
	LLVMTransformUtils
	LLVMVectorize
	LLVMAsmPrinter
	LLVMSelectionDAG
	LLVMX86Utils
	LLVMMCDisassembler
	LLVMTarget
	LLVMBitWriter
	LLVMIRReader
	LLVMAsmParser
	LLVMLinker
	LLVMProfileData
	LLVMObject
	LLVMX86CodeGen
	LLVMX86AsmPrinter
	LLVMX86AsmParser
	LLVMX86Desc
	LLVMX86Info
	LLVMX86Disassembler
)